--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -1,5 +1,6 @@
 .main-wrapper {
-  margin: 50px 300px(auto);
+  max-width:800px;
+  margin: 50px 350px(auto);
   padding: ($base-size * 4) ($base-size * 4);
   background: $color-light;
   border-bottom: 1px solid lighten($color-dark, 70%);
@@ -104,6 +105,8 @@
     }
 
   .overlay {
+    text-align: center;
+    line-height: 200px;
     position: absolute;
     padding: 0 15px;
     top: 0;
@@ -114,15 +117,15 @@
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: $color-dark ;
+    background-color: rgba(0,0,0,0.6) ;
     i{
-        margin: 10px;
-        position: absolute;
+        margin: 0 20px;
         font-size: $base-size * 3;
         visibility: hidden;
         opacity: 0;
         transition: opacity .2s, visibility .2s,;
-        z-index: 2;
+        z-index: 5;
+        line-height: 100px;
     }
   }
 }
